--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>tartarus.sh</title>
+  <meta content="TARTARUS" property="og:title" />
+  <meta content="THE OFFICAL TARTARUS WEBSITE" property="og:description" />
+  <meta content="https://tartarus-sh.github.io" property="og:url" />
+  <meta content="https://tartarus-sh.github.io/tartarus.png" property="og:image" />
+  <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+  <html lang="en">
   <style>
     @font-face { font-family: 'PixelFont'; src: url('font.ttf') format('truetype'); }
     body { background: #1e1e1e; color: #8aff8a; font-family: 'PixelFont', monospace; margin: 0; padding: 0; overflow: hidden; position: relative; }
